<resources>
    <string name="app_name">medicApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MedicApp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  global -->
    <string name="btnguardar">Guardar</string>


    <!--  Medico fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_medico">Nombre del médico</string>
    <string name="domicilio_medico">Calle, número y colonia</string>
    <string name="localidad_medico">Localidad y provincia</string>
    <string name="tlf_medico">Telefono</string>
    <string name="cel_medico">Celular</string>
    <string name="cita">Próxima cita</string>
    <string name="title_activity_agregar_medicamento">AgregarMedicamento</string>
    <string name="title_activity_agregar_alarma">AgregarAlarma</string>
    <string name="btnfecha">Fecha</string>
    <string name="btnhora">Hora</string>

    <!--  Medicamento fragment -->
    <string name="btnfechainicio">Desde</string>
    <string name="btnfechafinal">Hasta</string>
    <string name="btnHoraInicio">Hora </string>
    <string name="tvfrec">Repetir cada</string>
    <string name="nomAlt">Nombre alternativo</string>
    <string name="fechaInicio">Fecha inicial</string>
    <string name="fechaFinal">Fecha final</string>
    <string name="horaInicio">Hora de inicio de alarma</string>
    <string name="busqueda">Escriba el nombre del medicamento</string>




    <string-array name="FrecuenciaMin">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="FrecuenciaHrs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_pattern_lock">PatternLock</string>
    <string name="title_activity_main">MedicApp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_custom_pattern">customPattern</string>
    <string name="title_activity_inicio_fragment">InicioFragment</string>


    <!--  Fragment configuracion -->
    <string name="tituloAjustes">Ajustes globales de alarmas</string>
    <string name="tituloHistorial">Historial de alarmas y citas médicas</string>
    <string name="tituloGoogle">Conexión con google assistant</string>
    <string name="TituloAcerca">Acerca del desarrollo de esta aplicación</string>

    <!--  Dialog Acerca de -->
    <string name="ProyectoDesc">Esta aplicacion ha sido desarrollada por: Diego Yael Gomez Rosalio,
    Angel y Jaciel de la Facultad de informática en la Universidad Autónoma de Querétaro. Se ha utilizado
    Android studio para el desarrollo teninedo como requerimiento de android minimo 4.4 </string>
    <string name="DialogHistorial"> A continuacion se muestra el historial</string>
    <string name="DialogGoogle"> Informacion de google assistant</string>
    <string name="DialogAjustes">Ajustes</string>

    <!--  Notificaciones -->
    <string name="ChannelName"> Notificaciones de Medicapp</string>
    <string name="ChannelDsc"> Notificaciones de Medicamentos</string>



</resources>
