<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AgregarMedico">


    <EditText
        android:id="@+id/txtMedico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/nombre_medico"
        />

    <EditText
        android:id="@+id/txtDomicilio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/domicilio_medico"

       />

    <EditText
        android:id="@+id/txtTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/tlf_medico"
        android:inputType="phone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/btnFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/btnfecha"
            />

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">




        <Button
            android:id="@+id/btnHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/btnhora"
            />



        <EditText
            android:id="@+id/txtHora"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"

            />

    </LinearLayout>

    <Button
        android:id="@+id/btnGuardarMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnguardar"
        android:layout_margin="15dp"
        android:layout_gravity="center"
     />

</LinearLayout>
</ScrollView>