<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AgregarMedicamento">

    <SearchView
        android:id="@+id/searchViewMedicamento"
        android:layout_width="358dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFechaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/btnfechainicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewMedicamento" />

    <EditText
        android:id="@+id/txtFechaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFechaInicio"
        app:layout_constraintTop_toBottomOf="@+id/searchViewMedicamento" />

    <EditText
        android:id="@+id/txtFechaFinal"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnFechaFinal"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaInicio" />

    <Button
        android:id="@+id/btnFechaFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/btnfechafinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFechaInicio" />

    <TextView
        android:id="@+id/tvFrecuencia"
        android:layout_width="82dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvfrec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFechaFinal" />

    <Spinner
        android:id="@+id/spinnerFrecuencia"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:entries="@array/Frecuencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFrecuencia"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaFinal" />

    <TextView
        android:id="@+id/tvnombreAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/tvnomAlt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrecuencia" />

    <EditText
        android:id="@+id/txtNombreAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toEndOf="@+id/tvnombreAlt"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFrecuencia" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnguardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewMedicamento" />

</android.support.constraint.ConstraintLayout>
</ScrollView>